# LichClient

./: pyproject.toml
data/: data.json  profile.json
lichclient/: blizzard.py  client.py  main.py  models.py
lichclient/blizzard/: __init__.py  client.py  response.py
